# OMParser.jl

./: .gitattributes  .gitignore  Project.toml  README.md
.github/workflows/: main.yml  manual.yml  release.yml
lib/: README.md
lib/ext/: README.md
lib/parser/: .gitignore  BaseModelica_Lexer.g  GenerateJLHeader.jl  Makefile.common  Makefile.in  MetaModelicaJuliaLayer.c  MetaModelicaJuliaLayer.h  Modelica.g  ModelicaParserCommon.h  OpenModelicaBootstrappingHeader.h  OpenModelicaJuliaHeader.h  Parser_jl.c  README.md  configure.ac
src/: OMParser.jl
test/: BreakingPendulum.mo  HelloWorld.mo  runtests.jl
